--- a/section02/cyworld/index.html
+++ b/section02/cyworld/index.html
@@ -1,2 +1,25 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="ko">
+  <head>
+    <meta charset="utf-8" />
+    <title>홍길동님의 미니홈피 :: 사이좋은 사람들, 싸이월드</title>
+    <link rel="stylesheet" href="./styles/index.css" />
+  </head>
+  <body>
+    <div class="background">
+      <div class="outerbox">
+        <div class="wrapper">
+          <div class="wrapper__left">
+            <div class="wrapper__left__header"></div>
+            <div class="wrapper__left__body">
+              <div class="left__body__header"></div>
+              <div class="left__body__profile"></div>
+              <div class="left__body__footer"></div>
+            </div>
+          </div>
+          <div class="wrapper__right"></div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
